--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        android:screenOrientation="portrait"
+        >
         <activity android:name=".ui.gallery.post"></activity>
         <activity android:name=".ui.matchHistory.Scoreboard" />
         <activity android:name=".ui.create_match.ScoreBoard" />
